; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/misc/extr_ep93xx_pwm.c_ep93xx_pwm_writel.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/misc/extr_ep93xx_pwm.c_ep93xx_pwm_writel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ep93xx_pwm = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ep93xx_pwm*, i32, i32)* @ep93xx_pwm_writel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ep93xx_pwm_writel(%struct.ep93xx_pwm* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.ep93xx_pwm*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.ep93xx_pwm* %0, %struct.ep93xx_pwm** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %5, align 4
  %8 = load %struct.ep93xx_pwm*, %struct.ep93xx_pwm** %4, align 8
  %9 = getelementptr inbounds %struct.ep93xx_pwm, %struct.ep93xx_pwm* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i32, i32* %6, align 4
  %12 = zext i32 %11 to i64
  %13 = add nsw i64 %10, %12
  %14 = call i32 @__raw_writel(i32 %7, i64 %13)
  ret void
}

declare dso_local i32 @__raw_writel(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
